# code-analyser

./: README.md  pyproject.toml
code_analyser/core/: __init__.py  engine.py
code_analyser/languages/: base.py  java.py  python.py
code_analyser/utils/: brace.py  identifiers.py  unused.py
tests/: test_java_analyser.py  test_python_analyser.py
