[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analyser"
version = "0.1.0"
description = "A static analysis tool for various programming languages"
authors = [
    { name = "Satya Jhaveri" }
]
requires-python = ">=3.8"
dependencies = [

]
[dependency-groups]
dev = [
    "pytest"
]
